changes to references

--- a/tpw_references.bib
+++ b/tpw_references.bib
@@ -124,3 +124,95 @@
   year={2020},
   publisher={PsyArXiv}
 }
+
+# ARQ Article
+
+@article{bartholomew1991attachment,
+  title={Attachment styles among young adults: a test of a four-category model.},
+  author={Bartholomew, Kim and Horowitz, Leonard M},
+  journal={Journal of personality and social psychology},
+  volume={61},
+  number={2},
+  pages={226},
+  year={1991},
+  publisher={American Psychological Association}
+}
+
+# PRSS Article
+
+@article{kerig2019linking,
+  title={Linking childhood trauma exposure to adolescent justice involvement: The concept of posttraumatic risk-seeking},
+  author={Kerig, Patricia K},
+  journal={Clinical Psychology: Science and Practice},
+  volume={26},
+  number={3},
+  pages={e12280},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+# SSQ Articles
+
+@article{feiring2005persistence,
+  title={The persistence of shame following sexual abuse: A longitudinal look at risk and recovery},
+  author={Feiring, Candice and Taska, Lynn S},
+  journal={Child maltreatment},
+  volume={10},
+  number={4},
+  pages={337--349},
+  year={2005},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{feiring2007childhood,
+  title={Childhood sexual abuse and abuse-specific attributions of blame over 6 years following discovery},
+  author={Feiring, Candice and Cleland, Charles},
+  journal={Child Abuse \& Neglect},
+  volume={31},
+  number={11-12},
+  pages={1169--1186},
+  year={2007},
+  publisher={Elsevier}
+}
+
+# Elliott Delinquency Scale Book
+
+@book{elliott1985explaining,
+  title={Explaining delinquency and drug use},
+  author={Elliott, Delbert S and Huizinga, David and Ageton, Suzanne S},
+  year={1985},
+  publisher={Sage Publications}
+}
+
+# MHC - SF Articles
+
+@misc{keyes2009brief,
+  title={Brief description of the mental health continuum short form (MHC-SF)},
+  author={Keyes, Corey LM},
+  year={2009},
+  publisher={Atlanta}
+}
+
+@article{lamers2011evaluating,
+  title={Evaluating the psychometric properties of the mental health continuum-short form (MHC-SF)},
+  author={Lamers, Sanne MA and Westerhof, Gerben J and Bohlmeijer, Ernst T and ten Klooster, Peter M and Keyes, Corey LM},
+  journal={Journal of clinical psychology},
+  volume={67},
+  number={1},
+  pages={99--110},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+# Flourishing Index Article
+
+@article{vanderweele2017promotion,
+  title={On the promotion of human flourishing},
+  author={VanderWeele, Tyler J},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={31},
+  pages={8148--8156},
+  year={2017},
+  publisher={National Acad Sciences}
+}
