--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -2188,3 +2188,496 @@ complete %>%
     title = 'Distribution For BCAP Random Responding Subscale'
   )
 ```
+
+## Partner Relationships (DYADC)
+<!-#TODO: change above name to actual scale name ->
+
+### DYADC Description
+
+The DYADC is used to assess ... #TODO: *INSERT TEXT DESCRIPTION ABOUT BSI MEASURE*
+
+For the present study, 32 items from the BSI were collected in order to *TODO: INSERT TEXT  *
+
+Two items `e18` and `e19` are/should be reverse scored which is noted in the variable table below. *TODO: NEED CHANGE THE TEXT: Higher scores indicate more severe mental health symptoms. *
+
+The missing data rule was Applied. Calculations were completed only with participants that had less then 20% missing data (this includes `-77` responses) 
+
+Reference: [@ondersma2005brief](https://www.tandfonline.com/doi/abs/10.1207/s15374424jccp3402_9?casa_token=ZIJ3j8CLmK0AAAAA:_ztEWiTg5FO0Y3Jb_fL-zTuyqSmH623f0Q91STiqNR3jYvQyPzUiTqLSW3E5_U4iAucWcpqvbHAUug); 
+[DOI](https://doi.org/10.1207/s15374424jccp3402_9)
+Reference: [@spanier1976measuring](https://www.jstor.org/stable/350547);[DOI](https://doi.org/10.2307/350547)
+### DYADC) Variables
+
+#### Value Labels
+
+Multiple response options applied for DYADC
+
+Response options for items `e1` to `e15`.
+```{r dyadc-label-table, results = 'asis'}
+
+dyadc_label_df_1 <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5"),
+  label = c("Always Disagree",
+            "Almost Always Disagree",
+            "Frequently Disagree", 
+            "Occasionally Disagree",
+            "Almost Always Agree", 
+            "Always Agree")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_1 <- setNames(dyadc_label_df_1[-1, ], unlist(dyadc_label_df_1[1, ]))
+
+
+#create table
+dyadc_label_table_1 <- dyadc_label_df_1 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_1)
+
+
+```
+Response options for items `e16` to `e22`, except `e18` and `e19` are reverse scored
+```{r dyadc-label-table_2, results = 'asis'}
+
+dyadc_label_df_2 <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5"),
+  label = c("Never",
+            "Rarely",
+            "Occasionally", 
+            "More often than not",
+            "Most of the time", 
+            "All the time")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_2 <- setNames(dyadc_label_df_2[-1, ], unlist(dyadc_label_df_2[1, ]))
+
+
+#create table
+dyadc_label_table_2 <- dyadc_label_df_2 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_2)
+
+
+```
+
+Response options for items `e23` and `e24`
+```{r dyadc-label-table_3, results = 'asis'}
+
+dyadc_label_df_3 <- data.frame(
+  value = c("0", "1", "2", "3", "4"),
+  label = c("Never",
+            "Rarely", 
+            "Occasionally",
+            "Almost every day", 
+            "Every day")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_3 <- setNames(dyadc_label_df_3[-1, ], unlist(dyadc_label_df_3[1, ]))
+
+
+#create table
+dyadc_label_table_3 <- dyadc_label_df_3 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_3)
+
+
+```
+
+Response options for items `e25` to `e28`
+```{r dyadc-label-table_4, results = 'asis'}
+
+dyadc_label_df_4 <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5"),
+  label = c("Never",
+            "Less than once a month", 
+            "Once or twice a month",
+            "Once or twice a week", 
+            "Once a day",
+            "More often")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_4 <- setNames(dyadc_label_df_4[-1, ], unlist(dyadc_label_df_4[1, ]))
+
+
+#create table
+dyadc_label_table_4 <- dyadc_label_df_4 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_4)
+
+
+```
+
+Response options for items `e29` and `e30`
+```{r dyadc-label-table_5, results = 'asis'}
+
+dyadc_label_df_5 <- data.frame(
+ value = c("0", "1"),
+  label = c("Yes",
+            "No")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_5 <- setNames(dyadc_label_df_5[-1, ], unlist(dyadc_label_df_5[1, ]))
+
+
+#create table
+dyadc_label_table_5 <- dyadc_label_df_5 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_5)
+
+
+```
+Response options for items `e31`
+```{r dyadc-label-table_6, results = 'asis'}
+
+dyadc_label_df_6 <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5", "6"),
+  label = c("Extremely Unhappy",
+            "Fairly Unhappy", 
+            "A Little Unhappy",
+            "Happy",
+            "Very Happy",
+            "Extremely Happy",
+            "Perfect")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_6 <- setNames(dyadc_label_df_6[-1, ], unlist(dyadc_label_df_6[1, ]))
+
+
+#create table
+dyadc_label_table_6 <- dyadc_label_df_6 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_6)
+
+
+```
+
+Response options for items `e32`
+```{r dyadc-label-table_7, results = 'asis'}
+
+dyadc_label_df_7 <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5"),
+  label = c("My relationship can never succeed, and there is no more that I can do to keep the relationship going.", 
+            "It would be nice if it succeeded, but I refuse to do any more than I am doing now to keep the relationship going.",
+            "It would be nice if my relationship succeeded, but I can't do much more than I'm doing now to help it succeed.",
+            "I want very much for my relationship to succeed, and will do my fair share to see that it does.",
+            "I want very much for my relationship to succeed, and will do all I can to see that it does.",
+            "I want desperately for my relationship to succeed, and would go to almost any length to see that it does.")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+dyadc_label_df_7 <- setNames(dyadc_label_df_7[-1, ], unlist(dyadc_label_df_7[1, ]))
+
+
+#create table
+dyadc_label_table_7 <- dyadc_label_df_7 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  cols_width(everything() ~ px(180)) %>% 
+  apply_labtab_theme()
+
+# Print the table
+print(dyadc_label_table_7)
+
+
+```
+#### Survey Items
+
+All dyadc survey items are presented in the following table
+
+```{r dyadc-var-prep}
+# Pull question wording from qualtrics data
+dyadc_word <- qualtrics %>% 
+  select(starts_with("E")) %>%
+  slice(1) %>%
+  select(-(1:2))
+
+#create table with variable name, description, and notes
+dyadc_word_long <- dyadc_word %>% 
+  pivot_longer(cols = everything(), 
+               names_to = "var_name",
+               values_to = "description") %>% 
+  mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
+         var_name = str_to_lower(var_name), 
+         notes = case_when(var_name == "e18" ~ "This item should be reverse scored. `e18_r` is reverse scored",
+                           var_name == "e19" ~ "This item should be reverse scored. `e19_r` is reverse scored",
+                           TRUE ~ as.character(""))) %>%
+  slice(1:34)
+
+
+```
+
+
+```{r dyadc-var-table, results ='asis'}
+# Create the gt table object and apply generic theme
+dyadc_gt_table <- gt(dyadc_word_long)
+
+# Table-specific formatting (col width, names)
+dyadc_gt_table <- dyadc_gt_table %>% 
+  cols_label(var_name = "Variable", 
+            description = "Description",
+            notes = "Notes") %>% 
+  apply_tbl_theme() %>% 
+  cols_width(notes ~ px(150),
+             var_name ~ px(100)) %>%
+  tab_style(style = cell_text(align = "left"), locations = cells_column_labels())
+
+# Print the table
+print(dyadc_gt_table)
+
+#WHEN RENDERING WITH PDF USE: 
+#dyadc_gt_table
+```
+#### Scale and Subscales
+
+Information on total score and subscale variables are below. Variables were constructed by summing included items. 
+
+```{r dyadc alpha, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
+#Calculate internal reliability 
+# Total
+dyadc_alpha <- 
+  complete %>% 
+  select(
+    q1_r,
+    q2_r,
+    q3:q22,
+    q23_r,
+    q24:q28,
+    q29_r,
+    q30:q34
+  ) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_risk_alpha <-
+  complete %>%
+  select(
+    q1_r,
+    q3,
+    q5:q8,
+    q10:q14,
+    q16:q17,
+    q19:q20,
+    q22,
+    q23_r,
+    q24:q25,
+    q27,
+    q29_r,
+    q30:q33
+    ) %>%
+  psych::alpha(check.keys = TRUE)
+
+dyadc_happy_alpha <- 
+  complete %>% 
+  select(q1_r, q23_r, q29_r) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_feel_pers_alpha <- 
+  complete %>% 
+  select(q3, q25, q33) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_lonely_alpha <- 
+  complete %>% 
+  select(q5, q12, q22, q31) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_fam_conf_alpha <- 
+  complete %>% 
+  select(q6, q13, q17) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_rigid_alpha <-
+  complete %>% 
+  select(q7, q14, q20, q32) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_distress_alpha <- 
+  complete %>% 
+  select(q8, q11, q16, q19, q27) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_poverty_alpha <- 
+  complete %>% 
+  select(q10, q30) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_lie_alpha <-
+  complete %>% 
+  select(q4, q9, q15, q21, q26, q34) %>% 
+  psych::alpha(check.keys = TRUE)
+
+dyadc_random_alpha <-
+  complete %>% 
+  select(q2_r, q19, q28) %>% 
+  psych::alpha(check.keys = TRUE)
+```
+
+```{r dyadc-scale-table, results = 'asis'}
+# Create the table as a data frame
+dyadc_scale_df <- data.frame(
+  var_name = c("dyadc_total", "dyadc_con_total", "dyadc_aff_exp_total", "dyadc_satis_total", "dyadc_cohes_total"),
+  scale = c("DYADC Total score (32) ", "Consensus", "Affectional Expression", "Satisfaction", "Cohesion"),
+  scale_construction = c("e1, e2, e3, e4, e5, e6, e7, e8, e9, e10, e11, e12, e13, e14, e15, e16, e17, e18_r, e19_r, e20, e21, e22, e23, e24, e25, e26, e27, e28, e29, e30, e31, e32", "e1, e2, e3, e4, e5, e6, e7, e8, e9, e10, e11, e12, e13", "e4, e6, e29, e30", "e16, e17, e18_r, e19_r, e20, e21, e22, e23, e31, e32", "e24, e2, e26, e27, e28"),
+  scale_range = c("","","","",""), #TODO fill in range 
+   alpha = c(round(dyadc_alpha$total$raw_alpha, 3),
+              round(dyadc_con_alpha$total$raw_alpha, 3),
+              round(dyadc_aff_exp_alpha$total$raw_alpha, 3),
+              round(dyadc_satis_alpha$total$raw_alpha, 3),
+              round(dyadc_cohes_alpha$total$raw_alpha, 3))
+  )
+
+# Create the gt table object
+dyadc_scale_table <- gt(dyadc_scale_df) %>%
+  cols_align(columns = c("scale_range"), align = "center") %>% 
+  cols_label(var_name = "Variable Name",
+            scale = "Scale (# of items)", 
+            scale_construction = "Scale Construction",
+            scale_range = "Range*",
+            alpha = "Alpha") %>% 
+  tab_footnote(footnote = "*Range of possible values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>% 
+  cols_width(scale ~ px(135)) %>% 
+  apply_tbl_theme() 
+
+# Print the table
+print(dyadc_scale_table)
+
+```
+### Summary Statistics
+
+#### Descriptive Statistics
+
+Descriptive statistics are presented below for each item and total/subscale score
+
+```{r dyadc-mean-items}
+# Create subset of dyadc items
+dyadc_data_subset <- complete %>%
+  select(e1:e32, "dyadc_con_total", "dyadc_con_avg", "dyadc_aff_exp_total", "dyadc_aff_exp_avg", "dyadc_satis_total", "dyadc_satis_avg","dyadc_cohes_total", "dyadc_cohes_avg")
+
+# Calculate the summary statistics for each variable
+dyadc_summary_data <- lapply(dyadc_data_subset, function(x) {
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
+  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+dyadc_summary_data <- as.data.frame(dyadc_summary_data)
+
+# Set items as first row
+dyadc_summary_data <- rbind(names(dyadc_summary_data), dyadc_summary_data) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+dyadc_tbl <- dyadc_summary_data %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             Range = "Range*",
+             Missing = "% Missing") %>% 
+  cols_width(1 ~ px(165),2:5 ~ px(115)) %>%
+  cols_align(columns = c("Mean", "SD", "Range", "Missing"), align = "center") %>% 
+  tab_footnote("*Range of data values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>%
+  apply_tbl_theme()
+
+# Render the table
+dyadc_tbl
+
+```
+
+#### Distributions
+
+Distributions are presented for the total score and each subscale
+
+```{r dyadc-distributions, class.source='fold', echo = FALSE}
+complete %>%
+  composite_hist(
+    x = dyadc_total
+  ) +
+  labs(
+    title = 'Distribution for DYADC Scale'
+  )
+
+complete %>%
+  composite_hist(
+    x = dyadc_con_total
+  ) +
+  labs(
+    title = 'Distribution for DYADC Consensus Subscale'
+  )
+
+complete %>%
+  composite_hist(
+    x = dyadc_aff_exp_total,
+    bins = 10
+  ) +
+  labs(
+    title = 'Distribution for DYADC Affectional Expression Subscale'
+  )
+
+complete %>%
+  composite_hist(
+    x = dyadc_satis_total
+  ) +
+  labs(
+    title = 'Distribution for DYADC Satisfaction Subscale'
+  )
+
+complete %>%
+  composite_hist(
+    x = dyadc_cohes_total
+  ) +
+  labs(
+    title = 'Distribution for DYADC Cohesion Subscale'
+  )
+```
